force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__QBO_Company__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__QBO_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QBO Company</label>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipLabel>Bills and POs</relationshipLabel>
    <relationshipName>Bill_POs</relationshipName>
    <type>Lookup</type>
</CustomField>