force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_PO__c/fields/breadwinner_qbo__Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Status_Flag__c</fullName>
    <formula>IF(
  CONTAINS($User.UIThemeDisplayed, &#39;Theme4&#39;),

  IF( 
     ISBLANK( breadwinner_qbo__Internal_Status__c ),
     IF(breadwinner_qbo__Type__c = &#39;Bill&#39;,
     IF( breadwinner_qbo__Status__c = &#39;Paid&#39;,
    IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/bills_g.png&quot;, &quot;Paid&quot;),
        IF( breadwinner_qbo__Status__c = &#39;Overdue&#39;,IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/bills_r.png&quot;, &quot;Overdue&quot;),IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/bills_o.png&quot;, &quot;Open/Partial&quot;))),IF(breadwinner_qbo__Status__c=&#39;Closed&#39;,IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/po_g.png&quot;, &quot;Closed&quot;),IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/po_o.png&quot;, &quot;Open&quot;))
     ),
     IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/lightning_x.png&quot;, &quot;Deleted / Voided&quot;)
  ),

  IF( 
     ISBLANK( breadwinner_qbo__Internal_Status__c ),
     IF(breadwinner_qbo__Type__c = &#39;Bill&#39;,  
     IF( breadwinner_qbo__Status__c = &#39;Paid&#39;,
    IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/bills_g.png&quot;, &quot;Paid&quot;, 18,18),IF( breadwinner_qbo__Status__c = &#39;Overdue&#39;,IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/bills_r.png&quot;, &quot;Overdue&quot;, 18,18),IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/bills_o.png&quot;, &quot;Open/Partial&quot;, 18,18))),IF(breadwinner_qbo__Status__c=&#39;Closed&#39;,IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/po_g.png&quot;, &quot;Closed&quot;, 18,18),IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/po_o.png&quot;,&#39;Open&#39;,18,18))
      ),
      IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/voided_deleted.png&quot;, &quot;Deleted / Voided&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>